# ks-cli

./: .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  kscli.code-workspace  pyproject.toml  ruff.toml  semantic_release.toml
.github/: UPLOAD_DEMO_VIDEO.md
.github/workflows/: workflow.yml
.serena/: project.yml
.serena/memories/: project_overview.md  style_and_conventions.md  suggested_commands.md  task_completion_checklist.md
docs/: authentication.md  ci.md  configuration.md  design_patterns.md  e2e-testing.md  quickstart.md  recipes.md
src/kscli/: __main__.py  auth.py  cli.py  client.py  config.py  output.py
src/kscli/commands/: agent_help.py  auth.py  chunk_lineages.py  chunks.py  document_versions.py  documents.py  events.py  folders.py  invites.py  path_parts.py  permissions.py  sections.py  settings.py  tags.py  tenants.py  thread_messages.py  threads.py  users.py  versions.py  workflow_definitions.py  workflow_memory.py  workflows.py
src/kscli/utils/: checkout.py  error.py
tests/: test_agent_help.py
tests/e2e/: cli_helpers.py  conftest.py  test_cli_auth.py  test_cli_chunk_lineages.py  test_cli_chunks.py  test_cli_document_versions.py  test_cli_documents.py  test_cli_errors.py  test_cli_events.py  test_cli_folders.py  test_cli_invites.py  test_cli_output_formats.py  test_cli_path_parts.py  test_cli_permissions.py  test_cli_sections.py  test_cli_settings.py  test_cli_tags.py  test_cli_tenants.py  test_cli_thread_messages.py  test_cli_threads.py  test_cli_users.py  test_cli_workflow_definitions.py  test_cli_workflow_memory.py  test_cli_workflows.py
