[project]
name = "kscli"
version = "1.2.0"
description = "Add your description here"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
authors = [{ name = "Knowledge Stack", email = "support@knowledgestack.com" }]
urls = { Repository = "https://github.com/knowledgestack/ks-cli" }

dependencies = [
    "certifi>=2026.1.4",
    "click>=8.3.1",
    "ksapi>=1.25.0",
    "rich>=14.3.3",
]

[project.scripts]
kscli = "kscli.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kscli"]

[dependency-groups]
dev = [
    "basedpyright>=1.38.1",
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.2",
]

# Pyright configuration - strict type checking
[tool.basedpyright]
include = ["src/"]
pythonVersion = "3.12"
typeCheckingMode = "standard"
useLibraryCodeForTypes = true
# Add the project root to the Python path so imports work correctly
reportGeneralTypeIssues = "error"
reportOptionalMemberAccess = "error"
reportOptionalCall = "error"
reportOptionalIterable = "error"
reportOptionalContextManager = "error"
reportOptionalOperand = "error"
reportTypedDictNotRequiredAccess = "error"
reportPrivateImportUsage = "error"
reportConstantRedefinition = "error"
reportIncompatibleMethodOverride = "error"
reportIncompatibleVariableOverride = "error"
reportInconsistentConstructor = "error"
reportOverlappingOverload = "error"
reportMissingTypeArgument = "error"
reportAny = "none"
reportMissingImports = "error"
reportMissingTypeStubs = "error"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["e2e: end-to-end tests requiring a running backend"]
